Fix footer text alignemnt on large screens

--- a/src/styles/bg-stayles.css
+++ b/src/styles/bg-stayles.css
@@ -15,7 +15,7 @@
 }
 .footer {
   background-image: url(../../public/assets/zaiskri-bg.jpg);
-  height: 20vh;
+  height: 40vh;
 }
 
 @media screen and (max-width: 768px) {
