--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -15,12 +15,11 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 10%;
+  top: 25%;
   left: 50%;
   transform: translateX(-50%);
   justify-content: center;
-  align-items: center;
-  font-size: 2.5rem;
+  font-size: 3em;
   color: aliceblue;
   text-transform: uppercase;
   text-align: center;
@@ -35,5 +34,6 @@
 @media screen and (max-width: 768px) {
   .footer-text {
     font-size: 2rem;
+    top: 5%;
   }
 }
